修改配方结构